# piper

./: .gitmodules  docker_run.sh  piper_dual_can_teleop.py
examples/: calibrate_pika_piper_frame.sh  record.sh  teleoperate.sh  teleoperate_endpose.sh  teleoperate_pika.sh  teleoperate_pika_endpose.sh
lerobot_robot_piper_follower/: README.md  pyproject.toml
lerobot_robot_piper_follower/src/lerobot_robot_piper_follower/: __init__.py  config_piper_follower.py  piper_follower.py
lerobot_robot_piper_follower_endpose/: README.md  pyproject.toml
lerobot_robot_piper_follower_endpose/src/lerobot_robot_piper_follower_endpose/: __init__.py  config_piper_follower_endpose.py  piper_follower_endpose.py
lerobot_teleoperator_pika/: README.md  pyproject.toml
lerobot_teleoperator_pika/src/lerobot_teleoperator_pika/: __init__.py  config_pika_teleoperator.py  pika_teleoperator.py  pika_to_piper_endpose_processor.py  pika_to_piper_processor.py
lerobot_teleoperator_piper_leader/: README.md  pyproject.toml
lerobot_teleoperator_piper_leader/src/lerobot_teleoperator_piper_leader/: __init__.py  config_piper_leader.py  piper_leader.py
lerobot_teleoperator_piper_leader_endpose/: README.md  pyproject.toml
lerobot_teleoperator_piper_leader_endpose/src/lerobot_teleoperator_piper_leader_endpose/: __init__.py  config_piper_leader_endpose.py  piper_leader_endpose.py
scripts/: calibrate_pika_piper_frame.py  calibration.py  can_muti_activate.sh  check_pika.py  check_pika_dual.py  pika_coordinate_system_alignment.py  pika_piper_teleoperate.py  pika_piper_teleoperate_endpose.py  piper_dual_can_teleop.py  teleoperate_pika_with_calib.py
