[project]
name = "lerobot-robot-piper-follower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "richardSHkim", email = "shkim@superb-ai.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lerobot-robot-piper-follower = "lerobot_robot_piper_follower:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
