[project]
name = "lerobot_robot_piper_follower"
version = "0.1.0"
description = "LeRobot Robot plugin for AgileX PiPER follower arm"
readme = "README.md"
authors = [
    { name = "richardSHkim", email = "shkim@superb-ai.com" }
]
requires-python = ">=3.11"
dependencies = ["lerobot", "piper_sdk"]

[project.scripts]
lerobot-robot-piper-follower = "lerobot_robot_piper_follower:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
