[project]
name = "lerobot-teleoperator-pika"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "richardSHkim", email = "shkim@superb-ai.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lerobot-teleoperator-pika = "lerobot_teleoperator_pika:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
